#4 - implement manual speedtest client handling and server

--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -16,6 +16,11 @@ server {
     if ($query_string != "") {
             set $no_cache 1;
     }
+
+    location /run_speedtest {
+       set $exec "./var/www/html/scripts/speedtest.py";
+       content_by_lua "os.execute(ngx.var.exec)";
+    }
 }
 
 
@@ -40,5 +45,10 @@ server {
     }
     if ($query_string != "") {
             set $no_cache 1;
+    }
+
+    location /run_speedtest {
+       set $exec "/var/www/html/scripts/speedtest.py";
+       content_by_lua "os.execute(ngx.var.exec)";
     }
 }
