--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "docker-speedtest-analyser",
   "version": "v1.2",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/roest01/docker-speedtest-analyser.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/roest01/docker-speedtest-analyser.git"
   },
-  "license" : "MIT",
+  "license": "MIT",
   "dependencies": {
     "bootstrap": "twbs/bootstrap#v4.0.0-beta",
     "bootstrap-daterangepicker": "dangrossman/bootstrap-daterangepicker#^2.1.25",
     "chart.js": "nnnick/Chart.js#^2.7.0",
     "jquery": "jquery/jquery-dist#1.9.1 - 3",
-    "moment": "moment/moment#^2.18.1",
-    "papaparse": "mholt/PapaParse#^4.3.6"
+    "moment": "moment/moment#^2.23.0",
+    "papaparse": "mholt/PapaParse#^4.3.6",
+    "popper.js": "^1.14.6"
   },
   "engines": {
     "yarn": ">= 1.0.0"
