Changes to Dockerfile & vhost.conf
Changed Dockerfile to chmod +x speedtestRunner.py and added missing . in vhost.conf for set $exec "./var/www/html/scripts/speedtestRunner.py"; under location in the ssl portion.

--- a/config/vhost.conf
+++ b/config/vhost.conf
@@ -48,7 +48,7 @@ server {
     }
 
     location /run_speedtest {
-       set $exec "/var/www/html/scripts/speedtestRunner.py";
+       set $exec "./var/www/html/scripts/speedtestRunner.py";
        content_by_lua "os.execute(ngx.var.exec)";
     }
 }
